--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Empezando el proyecto</h1>
+    <div id="root"></div>
     <script type="module" src="./src/js/index.js"></script>
 </body>
 </html>
