--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width= , initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/main.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Empezando el proyecto</h1>
+    <h1>Sofkigram Posts:</h1>
     <div id="root"></div>
     <script type="module" src="./src/js/index.js"></script>
 </body>
