--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>Sofkigram Posts:</h1>
+    <div class = "forms-container">
+        <div class = editor>
+            <h3 class="title-element">  Add new Post </h3>
+            <form class="specialties-form">
+                <input class="text-input" id="specialty-name-input" placeholder="Title"            type="text" required>
+                <input class="text-input" id="specialty-physician-input" placeholder="message"  type="text" required>
+                <button class="add-button" type="submit">Add</button>
+            </form>
+        </div>
     <button type="button" id="btnAdd">Add New Post</button>
 <div id="postsList"></div>
 <div class="modal" id="modalAdd">
